updating padding for link to fix wrapping issue

--- a/themes/digital.gov/src/scss/new/_topics-button.scss
+++ b/themes/digital.gov/src/scss/new/_topics-button.scss
@@ -18,7 +18,8 @@
     white-space: nowrap;
 
     @include at-media("tablet") {
-      padding-left: units(1);
+      padding-left: 6px;
+      padding-right: 6px;
     }
   }
 
